plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.widescope'
version = ''

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.2.0'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webflux-ui', version: '2.2.0'

	// Spring boot security
	implementation 'org.springframework.boot:spring-boot-starter-security:3.1.5'
	//implementation group: 'org.springframework.security', name: 'spring-security-core', version: '6.1.5'
	implementation group: 'org.springframework.security', name: 'spring-security-messaging', version: '6.1.5'


	implementation 'org.springframework.boot:spring-boot-maven-plugin:3.1.5'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'
	testImplementation 'org.springframework.security:spring-security-test:6.1.5'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.1.5'
	implementation 'org.zalando:problem-spring-web:0.29.1'


	// Network
	implementation group: 'org.zstacks', name: 'znet', version: '6.0.0'

	implementation group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '4.0.0'

	//Authentication and Authorization
	//implementation 'com.okta.spring:okta-spring-boot-starter:3.0.4' // https://github.com/okta/okta-spring-boot
	implementation 'com.okta.spring:okta-spring-sdk:3.0.4'
	implementation 'com.okta.idx.sdk:okta-idx-java-api:3.0.7'



	implementation 'com.google.oauth-client:google-oauth-client:1.34.1'
	implementation 'com.google.api-client:google-api-client:2.2.0'
	implementation group: 'com.google.auth', name: 'google-auth-library-credentials', version: '1.19.0'
	implementation group: 'com.google.auth', name: 'google-auth-library-oauth2-http', version: '1.19.0'




	// MARIADB,POSTGRESQL,MYSQL,ORACLE,SQLSERVER,NOWFLAKE
	implementation group: 'com.jcraft', name: 'jsch', version: '0.1.55'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	runtimeOnly 'org.postgresql:postgresql'
	//runtimeOnly 'mysql:mysql-connector-java'
	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
	runtimeOnly 'net.snowflake:snowflake-jdbc:3.14.2'
	runtimeOnly 'org.xerial:sqlite-jdbc:3.43.0.0'



	// Embedded DB
	implementation group: 'berkeleydb', name: 'je', version: '3.2.76'
	implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.43.0.0'
	testImplementation group: 'org.apache.derby', name: 'derby', version: '10.15.2.0'
	testImplementation group: 'org.hsqldb', name: 'hsqldb', version: '2.7.2'
	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.3' // Excel

	// Csv
	implementation group: 'com.opencsv', name: 'opencsv', version: '5.8'
	implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.9.0'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.15.2'
	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.15.2'
	implementation group: 'org.json', name: 'json', version: '20230618'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'



	// Mongo
	implementation group: 'org.springframework.data', name: 'spring-data-mongodb', version: '4.1.4'
	implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.14'

	//Elasticsearch
	implementation group: 'org.elasticsearch', name: 'elasticsearch-core', version: '8.10.2'
	implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-high-level-client', version: '7.17.13'


	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-logging', version: '2.7.1'

	implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'


	// Encryption
	implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'


	//implementation group: 'org.apache.kafka', name: 'kafka-streams', version: '3.2.0'



	// Spark
	//implementation group: 'org.apache.spark', name: 'spark-core_2.13', version: '3.5.0'
	//compileOnly group: 'org.apache.spark', name: 'spark-sql_2.13', version: '3.5.0'
	//compileOnly group: 'org.apache.spark', name: 'spark-mllib_2.13', version: '3.2.1'
	//compileOnly group: 'org.apache.spark', name: 'spark-streaming_2.13', version: '3.2.1'
	//implementation group: 'graphframes', name: 'graphframes', version: '0.8.1-spark3.0-s_2.12'

	// parquet
	//implementation group: 'org.apache.parquet', name: 'parquet-avro', version: '1.12.3'




	//DataVec
	//implementation group: 'org.datavec', name: 'datavec-api', version: '1.0.0-M1.1'
	//implementation group: 'org.datavec', name: 'datavec-spark_2.11', version: '1.0.0-M1.1'
	//implementation group: 'org.datavec', name: 'datavec-local', version: '1.0.0-M1.1'


	implementation group: 'com.github.jsqlparser', name: 'jsqlparser', version: '4.4'
	// ANTLR SQl parser
	implementation group: 'org.antlr', name: 'antlr4-runtime', version: '4.10.1'
	implementation group: 'org.apache.commons', name: 'commons-text', version: '1.10.0'
	implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'


	// CSV, EXCEL and FLAR file parsing
	//Simple Java delimited and fixed width file parser. Handles CSV, Excel CSV, Tab, Pipe delimiters, just to name a few.
	implementation group: 'net.sf.flatpack', name: 'flatpack', version: '4.0.5'
	//Simple utility to handle Excel
	implementation group: 'net.sf.flatpack', name: 'flatpack-excel', version: '4.0.5'
	// Simple Java delimited and fixed width file parser. Handles CSV, Excel CSV, Tab, Pipe delimiters
	implementation group: 'net.sf.flatpack', name: 'flatpack-parent', version: '4.0.5', ext: 'pom'
	// Examples to handle CSV, Excel CSV
	implementation group: 'net.sf.flatpack', name: 'flatpack-examples', version: '4.0.5'


	// JSON Libs
	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.2'



	// String libs
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
	// NET lib
	implementation group: 'commons-net', name: 'commons-net', version: '3.10.0'



	// Encryption
	implementation group: 'org.passay', name: 'passay', version: '1.6.1'


	/*
	Firebase doc:
	https://github.com/eugenp/tutorials/blob/master/gcp-firebase/pom.xml
	*/
	implementation 'com.google.firebase:firebase-admin:9.3.0'

	// https://docs.spring.io/spring-integration/reference/ip.html
	// https://github.com/making/spring-integration-tcp-sample
	// https://piinalpin.com/2023/06/spring-boot-tcp-integration-ip/#implement-the-tcp-server

	implementation 'org.springframework.boot:spring-boot-starter-integration:3.3.2'
	implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '3.3.2'
	implementation 'org.springframework.integration:spring-integration-ip:6.3.2'

	/*Apple Notifications*/
	//implementation group: 'com.eatthepath', name: 'pushy', version: '0.15.4'
	//implementation group: 'io.netty', name: 'netty-tcnative-boringssl-static', version: '2.0.65.Final'
	//implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.70'
}

//tasks.named('test') {
//	useJUnitPlatform()
//}
